# iot_indv_project

./: .editorconfig  .gitattributes  .gitignore  README.md
source/: ASSIGNMENT_BRIEF.md  PROJECT_REQUIREMENTS.md  README.md
source/cloud/: README.md
source/cloud/ttn_payloads/: README.md  ttn_decoder.js
source/docs/: BETTER_SERIAL_PLOTTER.md  CURRENT_PROGRESS_REPORT.md  CURRENT_PROGRESS_REPORT.tex  ENERGY_MEASUREMENT_RUNBOOK.md  EVIDENCE_SCREENSHOT_CHECKLIST.md  GRADING_EVIDENCE_MATRIX.md  HARDWARE_SETUP.md  IMPLEMENTATION_PLAN.md  INA219_ENERGY_SETUP.md  MEASUREMENT_PLAN.md  PHASE1_REPORT.tex  POWER_TEST_QUICKSTART_FOR_FRIEND.md  PRESENTATION_PLAYBOOK.md  REPO_AUDIT_2026-04-18.md  RUNTIME_VALIDATION_CHECKLIST.md  SECURE_MQTT_SETUP.md  SUBMISSION_SNAPSHOT.md
source/edge_server/: README.md
source/edge_server/mqtt_listener/: README.md  listen_aggregates.py
source/firmware/esp32_node/: CMakeLists.txt  README.md  partitions_heltec_8mb.csv  platformio.ini  sdkconfig.heltec_wifi_lora_32_V3
source/firmware/esp32_node/components/app_display/: CMakeLists.txt  README.md  app_display.c
source/firmware/esp32_node/components/app_display/include/: app_display.h
source/firmware/esp32_node/components/arduino/: CMakeLists.txt  Kconfig.projbuild
source/firmware/esp32_node/components/comm_lorawan/: CMakeLists.txt  README.md  comm_lorawan.c  comm_lorawan.cpp
source/firmware/esp32_node/components/comm_lorawan/include/: comm_lorawan.h
source/firmware/esp32_node/components/comm_mqtt/: CMakeLists.txt  README.md  comm_mqtt.c
source/firmware/esp32_node/components/comm_mqtt/include/: comm_mqtt.h
source/firmware/esp32_node/components/metrics/: CMakeLists.txt  README.md  metrics.c
source/firmware/esp32_node/components/metrics/include/: metrics.h
source/firmware/esp32_node/components/sampling_control/: CMakeLists.txt  README.md  sampling_control.c
source/firmware/esp32_node/components/sampling_control/include/: sampling_control.h
source/firmware/esp32_node/components/signal_input/: CMakeLists.txt  README.md  signal_input.c
source/firmware/esp32_node/components/signal_input/include/: signal_input.h
source/firmware/esp32_node/components/signal_processing/: CMakeLists.txt  README.md  signal_processing.c
source/firmware/esp32_node/components/signal_processing/include/: signal_processing.h
source/firmware/esp32_node/include/: esp_netif_ip_addr.h  project_config.h  project_config_local.example.h  project_types.h
source/firmware/esp32_node/main/: CMakeLists.txt  README.md  app_main.c
source/firmware/esp32_node/test/: README.md
source/firmware/ina219_power_monitor/: README.md  platformio.ini
source/firmware/ina219_power_monitor/src/: main.cpp
source/prompts/: README.md  prompt_log_template.md
source/results/: README.md  analyze_ina219_log.py  analyze_mqtt_results.py  anomaly_filter_evaluation.py  better_serial_plotter_sample_2026-04-18.txt  compare_communication_volume.py  compare_ina219_runs.py  convert_mosquitto_log_to_csv.py  final_evidence_index_2026-04-21.md  lorawan_evidence_2026-04-20.md  measurement_summary_template.md  mqtt_evidence_2026-04-18.md  plot_final_results.py  plot_input_signal_profiles.py  reference_repo_power_conditions_2026-04-21.md  runtime_notes_2026-04-17.md  screenshot_inventory_2026-04-18.md  secure_mqtt_evidence_2026-04-22.md  wifi_mqtt_evidence_2026-04-21.md
source/results/summaries/: anomaly_evidence_2026-04-17.txt  anomaly_filter_evaluation_2026-04-21.json  anomaly_filter_evaluation_2026-04-21.md  anomaly_filter_metrics_2026-04-21.csv  anomaly_filter_window_tradeoff_2026-04-21.csv  communication_volume_comparison_2026-04-21.md  ina219_adaptive_2026-04-21.json  ina219_adaptive_2026-04-21.md  ina219_adaptive_2026-04-21.tsv  ina219_baseline_2026-04-21.json  ina219_baseline_2026-04-21.md  ina219_baseline_2026-04-21.tsv  ina219_comparison_2026-04-21.md  ina219_deepsleep_2026-04-21.json  ina219_deepsleep_2026-04-21.md  ina219_deepsleep_2026-04-21.tsv  ina219_three_mode_comparison_2026-04-21.md  input_signal_samples_2026-04-22.csv  mqtt_listener_2026-04-18_live.txt  mqtt_run_2026-04-17_anomaly_profile_synced.csv  mqtt_run_2026-04-17_anomaly_profile_synced.jsonl  mqtt_run_2026-04-17_clean_profile.csv  mqtt_run_2026-04-17_clean_profile.jsonl  mqtt_run_2026-04-17_clean_profile_synced.csv  mqtt_run_2026-04-17_clean_profile_synced.jsonl  mqtt_run_2026-04-17_listener.csv  mqtt_run_2026-04-17_listener.jsonl  mqtt_run_2026-04-17_listener_clean.csv  mqtt_run_2026-04-17_listener_clean.jsonl  mqtt_run_2026-04-17_noisy_profile_synced.csv  mqtt_run_2026-04-17_noisy_profile_synced.jsonl  mqtt_run_2026-04-17_sntp.csv  mqtt_run_2026-04-18_listener.csv  mqtt_run_2026-04-18_listener.jsonl  mqtt_run_2026-04-21_fresh_wifi.csv  mqtt_run_2026-04-21_fresh_wifi.jsonl  mqtt_summary_2026-04-17_anomaly_profile_synced.json  mqtt_summary_2026-04-17_anomaly_profile_synced.md  mqtt_summary_2026-04-17_clean_profile_synced.json  mqtt_summary_2026-04-17_clean_profile_synced.md  (+16 more)
